public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1595/source/compile
source.c: In function ‘main’:
source.c:10:26: error: expected ‘)’ before ‘;’ token
       for (i=0; i<=n; i++;)
                          ^
